kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bt-server
spec:
  selector:
    matchLabels:
      app: bt-server
  template:
    metadata:
      labels:
        app: bt-server
    spec:
      containers:
      - name: bt-server
        image: gcr.io/PROJECT_ID/IMAGE_SERVER:TAG
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bt-web
spec:
  selector:
    matchLabels:
      app: bt-web
  template:
    metadata:
      labels:
        app: bt-web
    spec:
      containers:
      - name: bt-web
        image: gcr.io/PROJECT_ID/IMAGE_WEB:TAG
      restartPolicy: Always
