kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bt-server
spec:
  selector:
    matchLabels:
      app: bt-server
  template:
    metadata:
      labels:
        app: bt-server
    spec:
      containers:
      - name: bt-server
        image: gcr.io/PROJECT_ID/IMAGE_SERVER
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bt-web
spec:
  selector:
    matchLabels:
      app: bt-web
  template:
    metadata:
      labels:
        app: bt-web
    spec:
      containers:
      - name: bt-web
        image: gcr.io/PROJECT_ID/IMAGE_WEB
      restartPolicy: Always
