kubernetes/postgresql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bt-postgres
  labels:
    name: database
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: bt-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:10.5-alpine
        volumeMounts:
        - name: postgres-volume-mount
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      restartPolicy: Always
      volumes:
      - name: postgres-volume-mount
        persistentVolumeClaim:
          claimName: bt-postgre-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bt-postgres-service
spec:
  selector:
    service: bt-postgres
  type: ClusterIP
  ports:
  - port: 5432
