kubernetes/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: bt-web-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: bt-web
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bt-server-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: bt-server
  ports:
  - port: 5536
    targetPort: 5536
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bt-web-ingress
  labels:
    app: bt-web-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: bt-web-service
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bt-server-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: bugtracker-external-ip
  labels:
    app: bt-server-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: bt-server-service
          servicePort: 5536
